[package]
name = "diagnostics-helper"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "time", "fs"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1.4", features = ["v4"] }
anyhow = "1.0.100"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
sysinfo = "0.37.2"
